# place-ipv6-server

./: .gitattributes  Cargo.toml  README.md
examples/: nsfw_checker.rs
src/: canvas.rs  canvas_processor.rs  cli_args.rs  main.rs  per_user_pps.rs  ping_listener.rs  ping_receiver.rs  websocket_handler.rs
static/: censor.css  censor.js  frontends.js  index.html  per_user_graph_example.html  prefix.js  script.js  style.css
static/blue/: index.html  script.js  style.css
static/timr/: index.html  script.js  styles.css  warning.js
static/ziad/: index.html  script.js  styles.css
