[package]
name = "place-ipv6-server"
version = "0.1.0"
edition = "2021"
authors = [ "EnderKill98" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Basics
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
color-eyre = "0.6.2"
clap = { version = "4.3.1", features = [ "derive" ] }
clap-num = "1.0.2"
image = "0.24.6"

# Webserver & Async stuff
tokio = { version = "1.28.2", features = [ "full" ] }
futures-util = "0.3.28"
async-fn-stream = "0.2.0"
axum = { version = "0.6.18", features = [ "ws", "macros" ] }
hyper = { version = "*", features = [ "full" ] }
tower-http = { version = "0.4.0", features = [ "fs", "trace" ] }

# Network sniffing / Ping receiving
#rawsock = "0.3.0"
rawsock = { git = "https://github.com/szymonwieloch/rust-rawsock", rev = "acd20af" }
mac_address = "1.1.5"
