[package]
name = "place-ipv6-server"
version = "0.2.0"
edition = "2021"
authors = [ "EnderKill98" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Increase performance slightly (approx 15% less cpu usage on heavy loads using a skylake processor)
# This will increase compile times. Comment this out if building on a weak machine.
[profile.release]
lto = "fat"
codegen-units = 1

[features]
default = [ "per_user_pps" ]
per_user_pps = [ "fxhash", "once_cell" ]

[dependencies]
# Basics
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = [ "env-filter" ] }
color-eyre = "0.6.2"
clap = { version = "4.3.1", features = [ "derive" ] }
clap-num = "1.0.2"
image = "0.23" # Same version used by dependency "nude" to prevent having 2 incompatible versions and needing to convert between them
crossbeam-channel = "0.5.8"
fxhash = { version = "0.2.1", optional = true }
once_cell = { version = "1.18.0", optional = true }
ipnet = "2.1.0"
nude = "0.3.0"
tensorflow = { version = "0.20.0", features = [ "eager", "ndarray" ] }

# Webserver & Async stuff
tokio = { version = "1.28.2", features = [ "macros", "rt-multi-thread" ] }
futures-util = "0.3.28"
async-fn-stream = "0.2.0"
axum = { version = "0.6.18", features = [ "ws" ] }
tower-http = { version = "0.4.0", features = [ "fs", "trace" ] }
serde = { version = "1.0.163", features = [ "derive" ] }
serde_json = "1.0.96"

# Network sniffing / Ping listening
rawsock = { git = "https://github.com/szymonwieloch/rust-rawsock", rev = "acd20af" }
